--- a/assets/css/style-testimonials.css
+++ b/assets/css/style-testimonials.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&family=Michroma&family=Montserrat&display=swap');
+
+/* page-wide attributes */
 * {
     margin: 0;
     padding: 0;
