--- a/assets/css/style-404.css
+++ b/assets/css/style-404.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Montserrat&family=Archivo+Black&family=Archivo+Narrow:wght@700&family=Caveat:wght@700&family=Comforter&family=Hammersmith+One&family=Homemade+Apple&family=Josefin+Sans:wght@200&family=Jost&family=Kanit:wght@700&family=Lexend+Exa:wght@900&family=Libre+Barcode+39+Text&family=Marcellus&family=Merienda:wght@700&family=Michroma&family=Monda&family=Montserrat+Subrayada:wght@700&family=Mr+Dafoe&family=Orbitron&family=Oxanium:wght@200;800&family=Quantico:wght@700&family=Rock+Salt&family=Russo+One&family=Splash&family=Teko:wght@700&family=Water+Brush&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&family=Michroma&family=Montserrat&family=Mr+Dafoe&display=swap');
+
+/* page-wide attributes */
 * {
     margin: 0;
     padding: 0;
@@ -6,23 +8,37 @@
     display: block;
 }
 
-html, body {margin: 0; height: 100%; overflow: hidden}
-
-head {display: none;}
-
-h1 {font-family: 'Teko', Arial, Helvetica, sans-serif;
-color: #f7f7f8;
-text-align: center;
-margin: 30px auto;}
-
-h2 {font-family: 'Monsterrat', Arial, Helvetica, sans-serif;
-    color: #f7f7f8;
-
+html,
+body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden
 }
 
-p {font-family: 'Monsterrat', 'roboto', sans-serif;}
+head {
+    display: none;
+}
 
-body {background-color: black;}
+h1 {
+    font-family: 'Teko', Arial, Helvetica, sans-serif;
+    color: #f7f7f8;
+    text-align: center;
+    margin: 10px auto;
+    letter-spacing: 4px;
+}
+
+h2 {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #f7f7f8;
+}
+
+p {
+    font-family: 'Montserrat', 'roboto', sans-serif;
+}
+
+body {
+    background-color: black;
+}
 
 a {
     text-decoration: none;
@@ -34,6 +50,16 @@ a:hover {
     color: #cc7d6f;
 }
 
+/* header */
+#oh-dear {
+    font-family: 'Mr Dafoe', cursive;
+    font-size: 3em;
+    color: #db0a0b;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+}
+
+/* page body */
 .container {
     position: relative;
     width: 100%;
@@ -41,13 +67,24 @@ a:hover {
 }
 
 .text-1 {
-    position: absolute;
-    left: 25%;
-    top: 10%;
-    width: 33%;
+    display: block;
+    margin: 10px auto;
+    width: 66%;
     z-index: 2;
     text-shadow: 2px 2px #00000094;
-    transform: rotate(-20deg);
+    text-align: center;
+}
+
+#no-u {
+    font-family: 'Monsterrat', 'roboto', sans-serif;
+}
+
+.text-2 {
+    display: block;
+    margin: 10px auto;
+    width: 66%;
+    z-index: 2;
+    text-shadow: 2px 2px #00000094;
     text-align: center;
 }
 
@@ -61,12 +98,10 @@ a:hover {
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
-@keyframes pog-move {
-    from {top: 500px;}
-    to {top: 0;}
-}
 
 .pot-img img {
+    position: relative;
+    top: 200%;
     width: auto;
     height: 450px;
     margin: 0 auto;
@@ -74,14 +109,6 @@ a:hover {
     animation-name: pog;
     animation-duration: 3s;
     animation-fill-mode: forwards;
-    position: relative;
-    top: 200%;
-}
-
-@keyframes pog {
-    from {transform: rotate(-1800deg);
-    }
-    to {transform: rotate(0deg);}
 }
 
 .pot-img img:hover {
@@ -90,39 +117,53 @@ a:hover {
     animation-name: pog-scale;
     animation-duration: 2s;
     animation-fill-mode: forwards;
-    /* transform: scale(1.1);
-    transition-duration: 2s; */
-}
-@keyframes pog-scale {
-    from {transform: scale(1);}
-    to {transform: scale(1.1);}
 }
 
-.text-2 {
-    position: absolute;
-    right: 20%;
-    bottom: -5%;
-    width: 33%;
-    z-index: 2;
-    text-shadow: 2px 2px #00000094;
-}
-
+/* footer */
 .acknowledgements {
     position: absolute;
     bottom: 0;
     right: 0;
     text-align: right;
-    color:#f7f7f8
+    color: #f7f7f8
 }
 
-#oh-dear {font-family: 'Mr Dafoe', cursive;
-    font-size: 3em;
-color: #db0a0b;
-letter-spacing: 6px;
-text-transform: uppercase;}
+/* media queries */
+@media screen and (max-width: 315px) {
+    .pot-img img {
+        width: 100vw;
+        height: auto;
+        transition-duration: 0s;
+    }
+}
 
-#no-u {font-family: 'Monsterrat', 'roboto', sans-serif;}
+/* animations */
+@keyframes pog-move {
+    from {
+        top: 500px;
+    }
 
-#direction {text-align: right;
+    to {
+        top: 0;
+    }
+}
 
+@keyframes pog {
+    from {
+        transform: rotate(-1800deg);
+    }
+
+    to {
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes pog-scale {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
 }
