--- a/assets/css/style-faq.css
+++ b/assets/css/style-faq.css
@@ -18,6 +18,7 @@ h2 {
     letter-spacing: 4px;
     margin-bottom: 10px;
     color: #db0a0b;
+    text-align: center;
 }
 
 a {
@@ -194,6 +195,37 @@ header {
     background-color: #00000061;
     backdrop-filter: blur(10px);
     padding: 20px;
+}
+
+.faq p {
+    text-align: center;
+}
+
+.push-contact {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.push-contact p {
+    background: url(../images/index/pb1.png) no-repeat;
+    background-size: cover;
+    line-height: 2.2em;
+    background-position: 50%;
+    border-radius: 10px;
+}
+
+.push-contact p:hover {
+    background: #f8f8f7;
+    color:#000000;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 4px;
+    border-radius: 0 0 0 0;
+    transition-duration: 1s;
+    text-shadow: none;
+}
+
+.push-contact a:hover {
+    color:#db0a0b;
 }
 
 /* footer */
