--- a/assets/css/style-404-500.css
+++ b/assets/css/style-404-500.css
@@ -90,12 +90,11 @@ a:hover {
 
 .pot-img {
     margin: 0 auto;
-    position: relative;
-    top: 500px;
-    z-index: 1;
+    width: 30%;
+    z-index: -1;
     animation-name: pog-move;
-    animation-timing-function: cubic-bezier(0, 1.5, 1, 1.5);
-    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-duration: 0.1s;
     animation-fill-mode: forwards;
 }
 
@@ -107,7 +106,8 @@ a:hover {
     margin: 0 auto;
     transition-duration: 1s;
     animation-name: pog;
-    animation-duration: 3s;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in;
     animation-fill-mode: forwards;
 }
 
@@ -138,23 +138,18 @@ a:hover {
 }
 
 /* animations */
-@keyframes pog-move {
-    from {
-        top: 500px;
-    }
-
-    to {
-        top: 0;
-    }
-}
 
 @keyframes pog {
     from {
-        transform: rotate(-1800deg);
+        transform: rotate(-10deg) scale(4);
+        opacity: 0;
+        z-index: -1;
     }
 
     to {
-        transform: rotate(0deg);
+        transform: rotate(0deg) scale(1);
+        opacity: 1;
+        z-index: 3;
     }
 }
 
