--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -38,7 +38,7 @@ body {
 .bg {
     background: url(../images/contact/contact-bg.png) no-repeat, #00000061;
     background-blend-mode: overlay;
-    background-position: 45%;
+    background-position: 45% 0%;
     background-size: cover;
     width: 100%;
     height: 100vh;
