--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -370,11 +370,13 @@ label {
 #cal-rex-git {
     grid-area: creds-1;
     text-align: left;
+    padding-left: 2%;
 }
 
 #copyright {
     grid-area: creds-2;
     text-align: right;
+    padding-right: 2%;
 }
 
 /* media-queries */
