--- a/assets/css/style-faq.css
+++ b/assets/css/style-faq.css
@@ -318,11 +318,13 @@ header {
 #cal-rex-git {
     grid-area: creds-1;
     text-align: left;
+    padding-left: 2%;
 }
 
 #copyright {
     grid-area: creds-2;
     text-align: right;
+    padding-right: 2%;
 }
 
 /* media-queries */
