--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -417,11 +417,13 @@ nav {
 #cal-rex-git {
     grid-area: creds-1;
     text-align: left;
+    padding-left: 2%;
 }
 
 #copyright {
     grid-area: creds-2;
     text-align: right;
+    padding-right: 2%;
 }
 
 /* media-queries */
