--- a/assets/css/style-faq.css
+++ b/assets/css/style-faq.css
@@ -79,7 +79,7 @@ nav {
     width: 85px;
     height: 65px;
     line-height: 65px;
-    background: url(../images/index/pb1flip.png) no-repeat;
+    background: url(../images/site-wide/pb1flip.png) no-repeat;
     background-size: 365px;
     background-position: 0% 77%;
     border-radius: 20px;
@@ -169,7 +169,7 @@ header {
 }
 
 .logo {
-    background: url(../images/index/ronin-logo-clip.png) no-repeat;
+    background: url(../images/site-wide/ronin-logo-clip.png) no-repeat;
     background-size: contain;
     background-position: 50%;
 }
@@ -206,7 +206,7 @@ header {
 }
 
 .push-contact p {
-    background: url(../images/index/pb1.png) no-repeat;
+    background: url(../images/faq/pb1.png) no-repeat;
     background-size: cover;
     line-height: 2.2em;
     background-position: 50%;
@@ -231,7 +231,7 @@ header {
 .ink-partition {
     width: 100%;
     height: 200px;
-    background: url(../images/index/ink-partition-4.png) no-repeat center;
+    background: url(../images/site-wide/ink-partition-4.png) no-repeat center;
     background-size: cover;
     position: absolute;
     z-index: 1;
