--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -51,7 +51,7 @@ body {
 .ink-partition {
     width: 100%;
     height: 200px;
-    background: url(../images/index/ink-partition-4.png) no-repeat center;
+    background: url(../images/site-wide/ink-partition-4.png) no-repeat center;
     background-size: cover;
     position: absolute;
     z-index: 1;
@@ -89,7 +89,7 @@ nav {
     width: 85px;
     height: 65px;
     line-height: 65px;
-    background: url(../images/index/pb1flip.png) no-repeat;
+    background: url(../images/site-wide/pb1flip.png) no-repeat;
     background-size: 365px;
     background-position: 0% 77%;
     border-radius: 20px;
