--- a/assets/css/style-faq.css
+++ b/assets/css/style-faq.css
@@ -81,7 +81,7 @@ nav {
     height: 65px;
     line-height: 65px;
     pointer-events: auto;
-    background: url(../images/site-wide/pb1flip.png) no-repeat;
+    background: url(../images/site-wide/pb1flip.webp) no-repeat;
     background-size: 365px;
     background-position: 0% 77%;
     border-radius: 20px;
@@ -172,7 +172,7 @@ header {
 }
 
 .logo {
-    background: url(../images/site-wide/ronin-logo-clip.png) no-repeat;
+    background: url(../images/site-wide/ronin-logo-clip.webp) no-repeat;
     background-size: contain;
     background-position: 50%;
 }
@@ -234,7 +234,7 @@ header {
 .ink-partition {
     width: 100%;
     height: 200px;
-    background: url(../images/site-wide/ink-partition-4.png) no-repeat center;
+    background: url(../images/site-wide/ink-partition.webp) no-repeat center;
     background-size: cover;
     position: absolute;
     z-index: 1;
