--- a/assets/css/style-404-500.css
+++ b/assets/css/style-404-500.css
@@ -124,12 +124,14 @@ a:hover {
 
 /* media queries */
 @media screen and (min-width: 1000px) {
+    /* html and body ruleset sourced from stack overflow */
     html,
     body {
         margin: 0;
         height: 100%;
         overflow: hidden
     }
+
     .acknowledgements {
         position: absolute;
         bottom: 1%;
