--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -184,6 +184,8 @@ header {
 }
 
 /* body and contact form */
+/* original build was sourced from work created during the Code Institute love Running project (https://github.com/Code-Institute-Org/love-running-2.0) 
+form then re-styled from there. Specific elements in are commented below*/
 label {
     display: block;
     padding-bottom: 3px;
@@ -195,7 +197,9 @@ label {
     height: 775px;
 }
 
+
 .signup-form {
+    /* original code sourced from Love Running @ Code Institute */
     margin: 50px auto 0 auto;
     color: #f7f7f8;
     background-color: #00000061;
@@ -206,17 +210,19 @@ label {
 }
 
 .signup-form>h2 {
+    /* original code sourced from Love Running @ Code Institute */
     color: #f7f7f8;
     margin-bottom: 20px;
 }
 
 .text {
+    /* original code sourced from Love Running @ Code Institute */
     background: transparent;
     color: #f7f7f8;
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
-    border: 1px solid #fafafa;
+    border: 1px solid #f7f7f8;
     border-radius: 6px;
     padding: 0 0 0 5px;
     backdrop-filter: blur(10px);
@@ -237,7 +243,7 @@ label {
     color: #f7f7f8;
     width: 100%;
     margin: 5px 0 20px 0;
-    border: 1px solid #fafafa;
+    border: 1px solid #f7f7f8;
     border-radius: 6px;
     padding: 5px 0 0 5px;
     backdrop-filter: blur(10px);
@@ -261,6 +267,7 @@ label {
 }
 
 .contact-button {
+    /* original code sourced from Love Running @ Code Institute */
     float: right;
     margin-top: 40px;
     border: 1px solid #f7f7f8;
